
  - Fix SCons man page indentation under Debian's man page macros.

From Steven Knight:

  - Clarify the man page description of the SConscript(src_dir) argument.

  - User's Guide updates:  document the BUILD_TARGETS, COMMAND_LINE_TARGETS
    and DEFAULT_TARGETS variables; document the AddOption(), GetOption()
    and SetOption() functions; document the Requires() function.



RELEASE 0.98.5 - Sat, 07 Jun 2008 08:20:35 -0700

  From Benoit Belley:

  - Fix the Intel C++ compiler ABI specification for EMT64 processors.

  From David Cournapeau:

  - Issue a (suppressable) warning, not an error, when trying to link
    C++ and Fortran object files into the same executable.

  From Steven Knight:

  - Update the scons.bat file so that it returns the real exit status
    from SCons, even though it uses setlocal + endlocal.

  - Fix the --interactive post-build messages so it doesn't get stuck
    mistakenly reporting failures after any individual build fails.

  - Fix calling File() as a File object method in some circumstances.

  - Fix setup.py installation on Mac OS X so SCons gets installed
    under /usr/lcoal by default, not in the Mac OS X Python framework.



RELEASE 0.98.4 - Sat, 17 May 2008 22:14:46 -0700

  From Benoit Belley:

  - Fix calculation of signatures for Python function actions with
    closures in Python versions before 2.5.

  From David Cournapeau:

  - Fix the initialization of $SHF77FLAGS so it includes $F77FLAGS.

  From Jonas Olsson:

  - Fix a syntax error in the Intel C compiler support on Windows.

  From Steven Knight:

  - Change how we represent Python Value Nodes when printing and when
    stored in .sconsign files (to avoid blowing out memory by storing
    huge strings in .sconsign files after multiple runs using Configure
    contexts cause the Value strings to be re-escaped each time).

  - Fix a regression in not executing configuration checks after failure