@@ -22,6 +22,8 @@ From Steven Knight:
     and DEFAULT_TARGETS variables; document the AddOption(), GetOption()
     and SetOption() functions; document the Requires() function.
 
+  - Document suggested use of the Viual C/C++ /FC option to fix the
+    ability to double-click on file names in compilation error messages.
 
 
 RELEASE 0.98.5 - Sat, 07 Jun 2008 08:20:35 -0700
